html and body to overflow hidden to stop scroll

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,
+body {
+  overflow: hidden;
+}
 
 body {
   /* margin: 0; */
@@ -84,7 +88,7 @@ code {
 button {
   min-width: 80px;
   height: 80px;
-  font-size: 16px;
+  font-size: 32px;
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 100px;
   background-color: rgba(0, 0, 0, 0.8);
